[package]
name = "roplat_rerun"
version = "0.1.2"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
license = "Apache-2.0"
description = "Rerun integration for Robot Experimentation Platform"
categories = ["science::robotics"]
keywords = ["robot", "robotics", "rerun", "visualization", "roplat"]

[dependencies]
rerun = "0.26.0"
robot_behavior = "0.5.4"
rerun_urdf = { version = "0.1.0", path = "../utils/rerun_urdf" }
rsbullet = { version = "0.3.11", path = "../rsbullet/rsbullet" }
nalgebra = "0.34.1"
anyhow = "1.0.100"
